--- a/W3Edit/app.config
+++ b/W3Edit/app.config
@@ -1,11 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="ObjectListView" publicKeyToken="b1c5bf581481bcd4" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2.7.0.20263" newVersion="2.7.0.20263" />
+        <assemblyIdentity name="ObjectListView" publicKeyToken="b1c5bf581481bcd4" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-2.7.0.20263" newVersion="2.7.0.20263"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup></configuration>
