--- a/W3Edit/W3Edit.csproj
+++ b/W3Edit/W3Edit.csproj
@@ -92,6 +92,9 @@
     <Reference Include="LZ4">
       <HintPath>..\packages\lz4net.1.0.9.93\lib\net4-client\LZ4.dll</HintPath>
     </Reference>
+    <Reference Include="LZ4PCL">
+      <HintPath>..\packages\LZ4PCL.1.0.0\lib\portable-net4+netcore45+wpa81+MonoAndroid1+MonoTouch1\LZ4PCL.dll</HintPath>
+    </Reference>
     <Reference Include="ObjectListView">
       <HintPath>..\packages\ObjectListView.Official.2.8.1\lib\net20\ObjectListView.dll</HintPath>
     </Reference>
@@ -124,6 +127,12 @@
     </Compile>
     <Compile Include="frmQuestDesign.Designer.cs">
       <DependentUpon>frmQuestDesign.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmSaveEditor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmSaveEditor.Designer.cs">
+      <DependentUpon>frmSaveEditor.cs</DependentUpon>
     </Compile>
     <Compile Include="ImportExportUtility.cs" />
     <Compile Include="FlowTreeEditors\ChunkEditor.cs">
@@ -265,6 +274,11 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestFileOpenArgs.cs" />
+    <Compile Include="SaveModels\DelegateCommand.cs" />
+    <Compile Include="SaveModels\SavegameDataModel.cs" />
+    <Compile Include="SaveModels\SavegameModel.cs" />
+    <Compile Include="SaveModels\SavegameViewModel.cs" />
+    <Compile Include="SaveModels\VariableModel.cs" />
     <Compile Include="SelectChunkArgs.cs" />
     <Compile Include="Win32.cs" />
     <EmbeddedResource Include="frmAbout.resx">
@@ -326,6 +340,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmRenameDialog.resx">
       <DependentUpon>frmRenameDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSaveEditor.resx">
+      <DependentUpon>frmSaveEditor.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmSettings.resx">
       <DependentUpon>frmSettings.cs</DependentUpon>
@@ -390,10 +407,18 @@
       <Name>W3Edit.CR2W</Name>
       <EmbedInteropTypes>False</EmbedInteropTypes>
     </ProjectReference>
+    <ProjectReference Include="..\W3Edit.W3Speech\W3Edit.W3Speech.csproj">
+      <Project>{c025f253-c78b-4a3b-87e7-1b2a1a453b97}</Project>
+      <Name>W3Edit.W3Speech</Name>
+    </ProjectReference>
     <ProjectReference Include="..\W3Edit.W3Strings\W3Edit.W3Strings.csproj">
       <Project>{32d40d10-d6c3-48f0-aeb6-0f41c7e75cfd}</Project>
       <Name>W3Edit.W3Strings</Name>
       <EmbedInteropTypes>False</EmbedInteropTypes>
+    </ProjectReference>
+    <ProjectReference Include="C:\Users\Bence\Desktop\W3SavegameEditor-master\W3SavegameEditor.Core\W3SavegameEditor.Core.csproj">
+      <Project>{9c026da7-481d-43c6-8c18-635d69fdb423}</Project>
+      <Name>W3SavegameEditor.Core</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
