--- a/W3Edit/packages.config
+++ b/W3Edit/packages.config
@@ -3,5 +3,6 @@
   <package id="doboz4net" version="1.0.1" targetFramework="net45" />
   <package id="DockPanelSuite" version="3.0.0-alpha8" targetFramework="net45" />
   <package id="lz4net" version="1.0.9.93" targetFramework="net45" />
+  <package id="LZ4PCL" version="1.0.0" targetFramework="net461" />
   <package id="ObjectListView.Official" version="2.8.1" targetFramework="net45" />
 </packages>
