--- a/W3Edit.Bundles/packages.config
+++ b/W3Edit.Bundles/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="doboz4net" version="1.0.1" targetFramework="net45" />
   <package id="lz4net" version="1.0.9.93" targetFramework="net45" />
+  <package id="MarkerMetro.Unity.Ionic.Zlib" version="2.0.0.14" targetFramework="net45" />
 </packages>
