--- a/W3Edit/packages.config
+++ b/W3Edit/packages.config
@@ -2,7 +2,8 @@
 <packages>
   <package id="doboz4net" version="1.0.1" targetFramework="net45" />
   <package id="DockPanelSuite" version="3.0.0-alpha8" targetFramework="net45" />
-  <package id="lz4net" version="1.0.9.93" targetFramework="net45" />
+  <package id="lz4net" version="1.0.10.93" targetFramework="net461" />
   <package id="LZ4PCL" version="1.0.0" targetFramework="net461" />
-  <package id="ObjectListView.Official" version="2.8.1" targetFramework="net45" />
+  <package id="MarkerMetro.Unity.Ionic.Zlib" version="2.0.0.14" targetFramework="net461" />
+  <package id="ObjectListView.Official" version="2.9.1" targetFramework="net461" />
 </packages>
