--- a/W3Edit.Bundles/packages.config
+++ b/W3Edit.Bundles/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <packages>
   <package id="doboz4net" version="1.0.1" targetFramework="net45" />
   <package id="lz4net" version="1.0.10.93" targetFramework="net45" />
   <package id="MarkerMetro.Unity.Ionic.Zlib" version="2.0.0.14" targetFramework="net45" />
+  <package id="VVVV.FreeImage" version="3.15.1.1" targetFramework="net45" />
 </packages>
