--- a/W3Edit/W3Edit.csproj
+++ b/W3Edit/W3Edit.csproj
@@ -140,6 +140,12 @@
     <Compile Include="frmSaveEditor.Designer.cs">
       <DependentUpon>frmSaveEditor.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmTutorials.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmTutorials.Designer.cs">
+      <DependentUpon>frmTutorials.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmWCCPatch.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -350,6 +356,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmSettings.resx">
       <DependentUpon>frmSettings.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmTutorials.resx">
+      <DependentUpon>frmTutorials.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmWCCPatch.resx">
       <DependentUpon>frmWCCPatch.cs</DependentUpon>
