--- a/W3Edit/packages.config
+++ b/W3Edit/packages.config
@@ -7,4 +7,5 @@
   <package id="LZ4PCL" version="1.0.0" targetFramework="net461" />
   <package id="MarkerMetro.Unity.Ionic.Zlib" version="2.0.0.14" targetFramework="net461" />
   <package id="ObjectListView.Official" version="2.9.1" targetFramework="net461" />
+  <package id="OpenTK" version="2.0.0" targetFramework="net461" />
 </packages>
