Add GLControl and setup frmRender

--- a/W3Edit/W3Edit.csproj
+++ b/W3Edit/W3Edit.csproj
@@ -365,6 +365,9 @@
     <EmbeddedResource Include="frmRenameDialog.resx">
       <DependentUpon>frmRenameDialog.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmRender.resx">
+      <DependentUpon>frmRender.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmSaveEditor.resx">
       <DependentUpon>frmSaveEditor.cs</DependentUpon>
     </EmbeddedResource>
