--- a/W3Edit/packages.config
+++ b/W3Edit/packages.config
@@ -8,4 +8,5 @@
   <package id="MarkerMetro.Unity.Ionic.Zlib" version="2.0.0.14" targetFramework="net461" />
   <package id="ObjectListView.Official" version="2.9.1" targetFramework="net461" />
   <package id="OpenGL.Net" version="0.3.2" targetFramework="net461" />
+  <package id="OpenGL.Net.WinForms" version="0.3.2" targetFramework="net461" />
 </packages>
