--- a/W3Edit/packages.config
+++ b/W3Edit/packages.config
@@ -9,4 +9,5 @@
   <package id="ObjectListView.Official" version="2.9.1" targetFramework="net461" />
   <package id="OpenGL.Net" version="0.3.2" targetFramework="net461" />
   <package id="OpenGL.Net.WinForms" version="0.3.2" targetFramework="net461" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net461" />
 </packages>
