--- a/W3Edit/packages.config
+++ b/W3Edit/packages.config
@@ -10,4 +10,7 @@
   <package id="OpenGL.Net" version="0.3.2" targetFramework="net461" />
   <package id="OpenGL.Net.WinForms" version="0.3.2" targetFramework="net461" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net461" />
+  <package id="Vlc.DotNet.Core" version="2.1.132" targetFramework="net461" />
+  <package id="Vlc.DotNet.Core.Interops" version="2.1.132" targetFramework="net461" />
+  <package id="Vlc.DotNet.Forms" version="2.1.132" targetFramework="net461" />
 </packages>
