--- a/W3Edit/W3Edit.csproj
+++ b/W3Edit/W3Edit.csproj
@@ -160,6 +160,12 @@
     <Compile Include="Configuration.cs" />
     <Compile Include="CopyController.cs" />
     <Compile Include="FileSavedEventArgs.cs" />
+    <Compile Include="frmJournalEditor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmJournalEditor.Designer.cs">
+      <DependentUpon>frmJournalEditor.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmRender.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -382,6 +388,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmHexEditorView.resx">
       <DependentUpon>frmHexEditorView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmJournalEditor.resx">
+      <DependentUpon>frmJournalEditor.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
