--- a/W3Edit/W3Edit.csproj
+++ b/W3Edit/W3Edit.csproj
@@ -90,7 +90,7 @@
     </Reference>
     <Reference Include="format, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\VGMToolbox\format.dll</HintPath>
+      <HintPath>..\Libs\VGMToolbox\format.dll</HintPath>
     </Reference>
     <Reference Include="ICSharpCode.SharpZipLib, Version=0.86.0.518, Culture=neutral, PublicKeyToken=1b03e6acf1164f73, processorArchitecture=MSIL">
       <HintPath>..\packages\SharpZipLib.0.86.0\lib\20\ICSharpCode.SharpZipLib.dll</HintPath>
@@ -136,7 +136,7 @@
     <Reference Include="System.Xml" />
     <Reference Include="vgmtutil, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\VGMToolbox\vgmtutil.dll</HintPath>
+      <HintPath>..\Libs\VGMToolbox\vgmtutil.dll</HintPath>
     </Reference>
     <Reference Include="WeifenLuo.WinFormsUI.Docking">
       <HintPath>..\packages\DockPanelSuite.3.0.0-alpha8\lib\net40\WeifenLuo.WinFormsUI.Docking.dll</HintPath>
@@ -156,6 +156,12 @@
     <Compile Include="Configuration.cs" />
     <Compile Include="CopyController.cs" />
     <Compile Include="FileSavedEventArgs.cs" />
+    <Compile Include="frmImagePreview.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmImagePreview.Designer.cs">
+      <DependentUpon>frmImagePreview.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmJournalEditor.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -375,6 +381,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmHexEditorView.resx">
       <DependentUpon>frmHexEditorView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmImagePreview.resx">
+      <DependentUpon>frmImagePreview.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmJournalEditor.resx">
       <DependentUpon>frmJournalEditor.cs</DependentUpon>
