--- a/W3Edit.Render/packages.config
+++ b/W3Edit.Render/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AssimpNet" version="3.3.2" targetFramework="net452" />
+  <package id="Meta.Vlc" version="16.05.01" targetFramework="net452" developmentDependency="true" />
 </packages>
