--- a/W3Edit/packages.config
+++ b/W3Edit/packages.config
@@ -6,6 +6,7 @@
   <package id="lz4net" version="1.0.10.93" targetFramework="net461" />
   <package id="LZ4PCL" version="1.0.0" targetFramework="net461" />
   <package id="MarkerMetro.Unity.Ionic.Zlib" version="2.0.0.14" targetFramework="net461" />
+  <package id="Meta.Vlc" version="16.05.01" targetFramework="net461" developmentDependency="true" />
   <package id="ObjectListView.Official" version="2.9.1" targetFramework="net461" />
   <package id="OpenGL.Net" version="0.3.2" targetFramework="net461" />
   <package id="OpenGL.Net.WinForms" version="0.3.2" targetFramework="net461" />
